<resources>
    <string name="app_name">WordWolfAppAndroid</string>
    <string name="title_activity_settings_activity_test">SettingsTest</string>

    <!-- Custom Strings -->
    <string name="title_welcome">Welcome to WordWolf!</string>
    <string name="startup">Starting up...</string>
    <string name="loading_dictionary">Loading dictionary...</string>
    <string name="loaded_dictionary">Dictionary loaded</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_board">BoardActivity</string>
    <string name="word_so_far">> </string>
    <string name="score">Score:</string>
    <string name="title_activity_dictionary">DictionaryActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to Settings -->

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_set_user_to_test_1">Set user to\ntest1</string>
    <string name="action_set_user_to_test_2">Set user to\ntest2</string>
    <string name="action_sign_in">Sign in\nor create\nan account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_username">This username is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- Array Adapters -->
    <string name="username">username</string>
    <string name="high_score">000</string>
    <string name="total_score">0000</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_fake">FakeActivity</string>
    <string name="title_activity_connections">ConnectionsActivity</string>
    <string name="log_in">Log In</string>
    <string name="choose_opponent">Choose Opponent</string>
    <string name="input_text_hint">Input text for behavior below.</string>
    <string name="click_to_enter_text">Click to enter text.</string>
    <string name="choose_an_opponent">Choose an Opponent</string>
    <string name="game_over">Game Over. Play again?</string>
    <string name="game_setting">Game Settings</string>
    <string name="game_setup">Game Setup</string>
    <string name="title_activity_game_over">GameOverActivity</string>
    <string name="title_activity_create_new_account">CreateNewAccountActivity</string>
</resources>
