<?xml version="1.0" encoding="utf-8"?>
<!-- List View Adapter for displaying a line of public player data in a list -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/playerDataUsernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/playerDataHighScoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_score"
            android:layout_marginLeft="100dp"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/playerDataTotalScoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_score"
            android:layout_marginLeft="40dp"
            android:textSize="24sp"
            />

</LinearLayout>