<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:gravity="center_horizontal"
			  android:orientation="vertical"
			  android:paddingBottom="@dimen/activity_vertical_margin"
			  android:paddingLeft="@dimen/activity_horizontal_margin"
			  android:paddingRight="@dimen/activity_horizontal_margin"
			  android:paddingTop="@dimen/activity_vertical_margin"
			  android:background="@color/LightBlue"
			  tools:context="com.mortaramultimedia.deployedservertest.activities.LoginActivity">


	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		>

		<TextView
            android:id="@+id/titleText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/log_in"
			android:textSize="@dimen/abc_text_size_headline_material"
			/>

		<ImageButton
			android:id="@+id/clearInputFieldsButton"
			android:src="@drawable/login_button_clear"
			android:background="@android:color/transparent"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_centerHorizontal="false"
			android:layout_marginLeft="190dp"
			/>

	</LinearLayout>

	<!-- Login progress -->
	<ProgressBar
		android:id="@+id/login_progress"
		style="?android:attr/progressBarStyleLarge"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:visibility="gone"/>

	<ScrollView
		android:id="@+id/login_form"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:id="@+id/account_login_form"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<AutoCompleteTextView
				android:id="@+id/username"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/prompt_username"
				android:inputType="textNoSuggestions"
				android:maxLines="1"
				android:singleLine="true"/>

			<AutoCompleteTextView
				android:id="@+id/email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/prompt_email"
				android:inputType="textEmailAddress"
				android:maxLines="1"
				android:singleLine="true"/>

			<EditText
				android:id="@+id/password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/prompt_password"
				android:imeActionId="@+id/login"
				android:imeActionLabel="@string/action_sign_in_short"
				android:imeOptions="actionUnspecified"
				android:inputType="textPassword"
				android:maxLines="1"
				android:singleLine="true"/>


			<ImageButton
				android:id="@+id/doLoginButton"
				android:src="@drawable/login_button_log_in"
				android:layout_width="fill_parent"
				android:layout_height="60dp"
				android:layout_marginTop="24dp"
				android:layout_marginBottom="24dp"
				android:layout_alignParentBottom="true"
				android:layout_centerHorizontal="true"
				android:background="@color/wordwolf_button_color_blue_up"
				/>

			<ImageButton
				android:id="@+id/createNewAccountButton"
				android:src="@drawable/login_button_create_new_account"
				android:background="@android:color/transparent"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:layout_marginBottom="4dp"
				android:layout_alignParentBottom="true"
				android:layout_centerHorizontal="true"
				/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				>

				<ImageButton
					android:id="@+id/setUserToTest1_button"
					android:src="@drawable/login_button_set_user_test1"
					android:background="@android:color/transparent"
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					android:layout_marginTop="16dp"
					android:layout_marginBottom="4dp"
					android:layout_alignParentBottom="true"
					android:layout_centerHorizontal="true"
					/>

				<ImageButton
					android:id="@+id/setUserToTest2_button"
					android:src="@drawable/login_button_set_user_test2"
					android:background="@android:color/transparent"
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					android:layout_marginTop="16dp"
					android:layout_marginBottom="10dp"
					android:layout_alignParentBottom="true"
					android:layout_centerHorizontal="true"
					android:layout_marginLeft="30dp"
					/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				>

				<ImageButton
					android:id="@+id/setUserToTest3_button"
					android:src="@drawable/login_button_set_user_test3"
					android:background="@android:color/transparent"
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					android:layout_marginTop="16dp"
					android:layout_marginBottom="4dp"
					android:layout_alignParentBottom="true"
					android:layout_centerHorizontal="true"
					/>

				<ImageButton
					android:id="@+id/setUserToTest4_button"
					android:src="@drawable/login_button_set_user_test4"
					android:background="@android:color/transparent"
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					android:layout_marginTop="16dp"
					android:layout_marginBottom="10dp"
					android:layout_alignParentBottom="true"
					android:layout_centerHorizontal="true"
					android:layout_marginLeft="30dp"
					/>
			</LinearLayout>

			<!--Button
				android:id="@+id/account_sign_in_or_register_button"
				style="?android:textAppearanceSmall"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/action_sign_in"
				android:textStyle="bold"/>

			<Button
				android:id="@+id/setUserToTest1_button"
				style="?android:textAppearanceSmall"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				android:text="@string/action_set_user_to_test_1"
				android:textStyle="bold"/>

			<Button
				android:id="@+id/setUserToTest2_button"
				style="?android:textAppearanceSmall"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				android:text="@string/action_set_user_to_test_2"
				android:textStyle="bold"/-->

		</LinearLayout>
	</ScrollView>
</LinearLayout>
